# TaskWeave-AI

./: .env.example  API_DOCUMENTATION.md  README.md  alembic.ini  analysis_service.py  app.py  celery_app.py  config.py  database.py  deps.py  docker-compose.yml  dump.rdb  main.py  pyproject.toml  scheduler.py  simple_app.py  worker.py
ai/: __init__.py  pipelines.py  prompts.py  providers.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py
api/: __init__.py
api/v1/: __init__.py  auth.py  automations.py  events.py  integrations.py  organizations.py  projects.py  reports.py  tasks.py  users.py  webhooks.py
attached_assets/: Pasted--type-project-spec-version-1-0-0-name-TaskWeave-AI-tagline-AI-pow-1755358241814_1755358241814.txt
auth/: __init__.py  jwt.py  oauth.py  security.py
integrations/: __init__.py  base.py  gdrive.py  github.py  gmail.py  notion.py  slack.py  trello.py
models/: __init__.py  audit_log.py  automation.py  event.py  integration.py  organization.py  project.py  report.py  task.py  user.py  webhook.py
schemas/: __init__.py  automation.py  integration.py  organization.py  project.py  report.py  task.py  user.py  webhook.py
services/: __init__.py  auth_service.py  automation_service.py  organization_service.py  report_service.py  task_service.py  webhook_service.py
tasks/: __init__.py  analysis_tasks.py  notion_tasks.py  slack_tasks.py
workers/: __init__.py  automation_engine.py  report_generator.py  task_processor.py
